client/src/scss/main.scss
/* ... */
// App Content
.app-content {
  overflow-y: auto;
  flex: 1 1 auto;
  -webkit-overflow-scrolling: touch;
  padding: 0 0 72px; // account for ui chrome in mobile browsers
}


// keg list
.keg-list {

  .keg-list-item {
    border-bottom: 1px solid #eee;
    padding: 24px 0;

    .tap-name {
      font-size: 1.4rem;
      text-transform: uppercase;
      color: orange;
      text-align: center;
      margin: 0 0 24px;
      font-weight: 800;
    }

  }

  .beer-summary-view {
    margin: 0 0 1em;

    // hide extra details in keg list view
    .notes, .ibu {
      display: none;
    }
  }

}


.keg-detail {

  .keg {
    margin-bottom: 3em;
  }

  .keg-name {
    margin: 0 0 1em;
    font-size: 2rem;
    color: $darkBlue;
    font-weight: 400;

    a {
      font-weight: 600;
    }
  }

  .keg-summary-view {
    margin: 0 0 48px;
  }
}

// view. applied to most root components.
.view {
  padding: 24px;
}


// tap change view
.tap-change {

  .tap-change--tap-name {
    color: $khaki;
    font-size: 1.6rem;
    font-weight: 400;
  }

  .tap-change--beer-name {
    color: $darkBlue;
    font-size: 1.4rem;
    font-weight: 600;
  }
}

// beer list view
.beer-list-view {

  .beer-list-item.unavailable {
    opacity: 0.75;
  }

  .btn-add-beer {
    margin: 0 auto 2em;
    display: block;
  }
}


.page-header {
  margin: 0 0 1.5em;

  .page-title {
    font-size: 2.5rem;
    color: $darkBlue;
    margin: 0;
    font-weight: 600;
  }

  .page-subtitle {
    font-size: 1.25rem;
    color: $darkerBlue;
    font-weight: 600;
    margin: 0.25em 0 0;
  }

  p {
    font-size: 1rem;
  }
}

.beer-list {
  margin-bottom: 2em;
}

.beer-list-item, .brewery-list-item {

  display: flex;
  align-items: center;
  border-bottom: 1px solid $offGrey;
  padding: 0.5em 0;

  > header {
    flex: 2 1 0;
  }

  .meta {
    flex: 1 1 0;
  }

  .name {
    color: $lightBlue;
    margin: 0 0 8px;

    span {
      font-style: italic;
      font-size: 0.8em;
      color: $darkBlue;
      font-weight: 400;
    }
  }

  .variety {
    margin: 0;
    color: $khaki;
    font-weight: 400;
    font-size: 0.7em;
  }

  .meta {
    align-items: center;
    font-size: 0.7em;
    display: flex;

    span {
      flex: 1 1 0;
      margin-right: 2em;
    }
  }

}

// canBuy icon
// displayed when we have a confirmed distributor
// for a brewery or a beer

icon.icon-canbuy {
  width: 20px;
  height: 20px;
  vertical-align: top;
}

.brewery-detail {

  .brewery-detail__url {
    font-size: 20px;
    margin: 0 0 0.5em;

    a {
      color: $lightBlue;

      &:hover, &:focus {
        color: $darkBlue;
      }
    }
  }

  .page-subtitle {
    line-height: 20px;

    // add spacing if there's a Location
    span + .icon-canbuy {
      margin-left: 12px;
    }
  }

  .brewery-detail__description {
    width: 100%;
    font-weight: 400;
    font-size: 1.2rem;
    white-space: pre-wrap;
    margin: 0 0 2em;
  }

  .brewery-detail__admin-notes {
    width: 100%;
    font-weight: 400;
    font-size: 1.2rem;
    color: $khaki;

    b {
      display: block;
      font-weight: bold;
      margin: 0 0 0.25em;
    }
  }

  .brewery-detail__details {
    border-bottom: 1px solid #f2f2f2;
  }

  .brewery-edit {
    margin: 0 0 2em;
    border-bottom: 1px solid #f2f2f2;
  }
}



// circular score thing
.beer-vote-total {
  background: $lightBlue;
  width: 30px;
  height: 30px;
  border-radius: 100%;
  color: white;
  text-align: center;
  font-size: 0.8em;
  line-height: 30px;
}

// beer detail view
.beer-detail-view {

  .beer-summary-view, .beer-kegs-list {
    border-bottom: 1px solid $offWhite;
    margin-bottom: 2em;
  }

  .beer-summary-view .name a {
    pointer-events: none; // disable link to current page
  }
}

// beer details. name, brewery, etc.
.beer-summary-view {

  .meta {
    margin: 12px 0 24px;
    font-size: 1.1rem;
    color: $khaki;

    p {
      margin: 0;
      font-weight: 600;

      span {
        font-weight: 400;
      }
    }
  }

  .name {
    margin: 0 0 8px;
    font-size: 2rem;
    font-weight: 600;
    color: $darkerBlue;

    span {
      font-weight: 400;
    }
  }

  .variety-by-brewery {
    margin: 0 0 16px;
    font-size: 1.25rem;
    font-weight: 400;
    line-height: 1em;
    color: $darkBlue;

    span, a {
      font-weight: 800;
    }
  }

  .icon-canbuy {
    margin-left: 12px;
  }

  .notes {
    font-weight: 400;
    font-size: 1.2rem;
    white-space: pre-wrap;
    margin: 1em 0;
  }
}

.beer-actions, .brewery-actions {
  margin: 2em 0;

  .btn {
    font-size: 1rem;
  }

  .btn + .btn {
    margin-left: 0.5em;
  }
}


// table/list layout for single line items, multiple columns
.single-line-list {
  border: 1px solid #f2f2f2;
  border-radius: 2px;
  font-size: 16px;

  .list-item {
    background: #f2f2f2;

    &:nth-child(even){
      background: #fafafa;
    }

    display: flex;
    padding: 12px 16px;
    align-items: center;

    a {
      color: $darkBlue;
    }

    .column {
      flex: 1 1 0;
      display: flex;
      align-items: center;

      &.end {
        justify-content: flex-end;
      }
    }
  }
}

.list-title {
  color: $darkBlue;
  font-size: 1.2rem;
  margin: 1em 0;
}

.list-add-link {
  color: $darkerBlue;
  font-weight: bold;
  font-size: 20px;
  display: inline-block;
  margin: 0 0 1em;
}

.beer-kegs-list {
  padding: 0 0 2em;
}

.keg-summary-view {

  display: flex;

  .keg-summary {
    flex: 1 0 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: flex-start;
  }

  .tapped {
    color: $lightBlue;
    font-size: 1rem;
    font-weight: 400;
    margin: 0;
  }

  .keg-notes {
    font-size: 1rem;
    color: $highlight;
    font-style: italic;
    padding: 0 24px 0 0;
  }
}
/* ... */

